# gitstars

./: .gitignore  Cargo.toml  README.md  eslint.config.js  index.html  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: publish-to-auto-release.yml  test-build-only.yml
src/: App.css  App.tsx  App_old.tsx  lib.rs  settings.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/backend/: github_fetcher.rs  gitlab_fetcher.rs  mod.rs  settings.rs
src-tauri/src/fetcher/: github.rs  gitlab.rs
src/fetcher/: github.rs  gitlab.rs
