[package]
name = "gitstars"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bon = "3.6.3"
downcast-rs = "2.0.1"
gitlab = "0.1711.0"
octocrab = "0.44.1"
serde = "1.0"
serde_json ="1.0"
thiserror = "2.0.12"
tokio = {version = "1.45.0", features = ["full"]}

[dev-dependencies]
tempfile = "3.20.0"
