[package]
name = "gitstars"
version = "0.1.1"
description = "A Tauri App"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitstars_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.24.0"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

bon = "3.8.1"
gitlab = "0.1806.0"
octocrab = "0.49.5"
thiserror = "2.0.17"
tokio = {version = "1.49.0", features = ["full"] }
getset = "0.1.6"
unit-prefix = "0.5.2"
strum_macros = "0.27.2"
uuid = {version = "1.19.0", features = ["v4"] }

