[package]
name = "gitstars"
version = "0.1.1"
description = "A Tauri App"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitstars_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.27.0"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

bon = "3.9.1"
gitlab = "0.1811.0"
octocrab = "0.49.7"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
getset = "0.1.6"
unit-prefix = "0.5.2"
strum_macros = "0.28.0"
uuid = { version = "1.23.0", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
] }
